fix: fit 2 cards per row on smaller screens

--- a/css/equipment-selection.css
+++ b/css/equipment-selection.css
@@ -104,7 +104,7 @@ main {
     width: 100%;
     max-width: 50rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
     gap: 1rem;
     background-color: transparent;
     overflow-y: auto;
@@ -117,10 +117,9 @@ main {
     background-color: #D9D9D9;
     border: 1px solid #CCCCCC;
     border-radius: 0.5rem;
-    padding: 0.5rem;
     text-align: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    min-width: 10rem;
+    min-width: 9rem;
     height: 15rem;
     display: flex;
     flex-direction: column;
@@ -128,12 +127,12 @@ main {
     justify-content: center;
     font-size: 0.8rem;
     gap: 0.5rem;
+    padding: 1rem;
 }
 
 .equipment-card > img {
     height: 60%;
     border-radius: 1rem;
-    object-fit: contain;
 }
 
 .equipment-card > button {
@@ -142,4 +141,5 @@ main {
     padding: 0.2rem 1rem;
     background-color: var(--primary);
     color: var(--white);
+    font-size: 1rem;
 }
